# marker_tracking_for_AGV

./: .gitignore  README.md  gripper.ino  gripper_bg.py  manu_bg.py
agv_autorace/: CMakeLists.txt  package.xml  setup.py
agv_autorace/cfg/: DetectSignParams.cfg  DetectTrafficLightParams.cfg
agv_autorace/launch/: core.launch  follower.launch  follower2.launch  follower3.launch  leader.launch  leader_camera.launch  leader_ctrl.launch  leader_detect.launch  leader_lane.launch  leader_tracking.launch
agv_autorace/nodes/: core  find_work_point  marker_tracking
agv_autorace/nodes/follower/: back_for_promise  find_workspace  follower_core  follower_tmp  marker_tracking  pub_tb3_pose  rally_point  workspace
agv_autorace/nodes/leader/: lane_controller  lane_detector  parking_controller  parkinglot_detector  sign_detector
ar_marker/: package.xml
ar_marker/launch/: track_marker.launch
turtlebot3_autorace/.turtlebot3_autorace_control/nodes/: control_lane
turtlebot3_autorace/.turtlebot3_autorace_detect/nodes/: detect_lane
turtlebot3_autorace/turtlebot3_autorace_camera/launch/: turtlebot3_autorace_extrinsic_camera_action.launch  turtlebot3_autorace_extrinsic_camera_calibration.launch
turtlebot3_autorace/turtlebot3_autorace_control/nodes/: control_lane  control_lane_tmp
turtlebot3_autorace/turtlebot3_autorace_detect/cfg/: lane1
turtlebot3_autorace/turtlebot3_autorace_detect/launch/: turtlebot3_autorace_detect_traffic_light_tmp.launch
turtlebot3_autorace/turtlebot3_autorace_detect/nodes/: detect_traffic_light  detect_traffic_light_tmp
(+6 files in other folders)
